service/auth/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: warmth
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 2 
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: registry.cn-shanghai.aliyuncs.com/logic-base/auth
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/warmth
          readOnly: true
      volumes:
        - name: config
          configMap:
            name: config
