service/auth/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: warmth
spec:
  #externalTrafficPolicy: Cluster  # default
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: auth
  sessionAffinity: None # default
  type: ClusterIP
