service/auth/k8s/ingress-route.yml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth
  namespace: app-0
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-env0-app0-auth
  routes:
    - match: Host(`auth.app0.env0.luojm.com`) 
      kind: Rule
      services:
      - name: auth
        kind: Service
        port: 80
